Added input from user, input from machine, querys from decisions and the winner

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/desktop.css">
     <title>🤘</title>
 </head>
 <body>
-    <button class="op">Rock</button>
-    <button class="op">Paper</button>
-    <button class="op">Scissors</button>
+    <button class="op rock">Rock</button>
+    <button class="op paper">Paper</button>
+    <button class="op scissors">Scissors</button>
     <p></p>
     <script src="./game.js"></script>
 </body>
