JS done. I want to add reset, and CSS.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <button class="op rock">Rock</button>
     <button class="op paper">Paper</button>
     <button class="op scissors">Scissors</button>
-    <p></p>
+    <p class="infoText"></p>
+    <p class="score score-user"></p>
+    <p class="score score-computer"></p>
+    <p class="result"></p>
     <script src="./game.js"></script>
 </body>
 </html>
