Added a botton of restart

--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     <p class="infoText"></p>
     <p class="score score-user"></p>
     <p class="score score-computer"></p>
-    <p class="result"></p>
+    <div id="restart">
+        <div class="restart__header">
+            <h1 class="result">Pepe Won</h1>
+        </div>
+        <div class="restart__body">
+            <p>Try again?</p>
+            <button id="restart__button">Yes!</button>
+        </div>
+    </div>
+    <div id="overlay"></div>
     <script src="./game.js"></script>
 </body>
 </html>
